--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-study",
   "version": "1.0.0",
   "description": "> - console.error()\r > - console.table()\r > - console.dir()\r > - console.time()\r > - console.timeEnd()",
-  "main": "10_app.js",
+  "main": "11_app_mysql.js",
   "scripts": {
     "test": "node 10_app.js"
   },
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/postforty/Node-Study#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1"
   }
 }
