--- a/Mysql/.env.test
+++ b/Mysql/.env.test
@@ -1,6 +1,6 @@
 MYSQL_HOST = localhost
 MYSQL_PORT = 3306
-MYSQL_USERNAME = dev
+MYSQL_USERNAME = root
 MYSQL_PASSWORD = 1234
-MYSQL_DB = dev
+MYSQL_DB = root
 MYSQL_LIMIT = 10
